# alphastrike

./: .env.example  .gitignore  README.md  main.py  prd.json  progress.txt  pyproject.toml
configs/assets/: btcusdt.yaml  ethusdt.yaml  solusdt.yaml
data/: paper_trade_log.jsonl  paper_trade_state.json  reference_distributions.json
data/learned_params/: bnbusdt_params.json  btcusdt_params.json  ethusdt_params.json  solusdt_params.json
docs/: ARCHITECTURE.md  PRD.md  hyperliquid_api.yaml  hyperliquid_ws.yaml  weex_api.json
docs/plans/: 2026-02-01-adaptive-optimization-architecture.md  2026-02-01-adaptive-trading-system.md  2026-02-01-simons-protocol-strategy.md  2026-02-02-hyperliquid-ml-training-plan.md  2026-02-02-simons-enhancement-plan.md  2026-02-04-cli-design.md
models/: lightgbm.txt  lightgbm_hyperliquid_aave.txt  lightgbm_hyperliquid_apt.txt  lightgbm_hyperliquid_avax.txt  lightgbm_hyperliquid_bnb.txt  lightgbm_hyperliquid_btc.txt  lightgbm_hyperliquid_doge.txt  lightgbm_hyperliquid_eth.txt  lightgbm_hyperliquid_fet.txt  lightgbm_hyperliquid_link.txt  lightgbm_hyperliquid_near.txt  lightgbm_hyperliquid_paxg.txt  lightgbm_hyperliquid_sol.txt  lightgbm_hyperliquid_spx.txt  lightgbm_hyperliquid_uni.txt  lightgbm_hyperliquid_xrp.txt
scripts/: adaptive_demo.py  adaptive_optimize.py  ai_log_explainer.py  alphastrike.service  backtest.py  deploy.sh  hyperliquid_data_collector.py  hyperliquid_multiasset_backtest.py  hyperliquid_production_backtest.py  hyperliquid_testnet_trader.py  live_trader.py  llm_adaptive_backtest.py  medallion_backtest.py  medallion_v2_backtest.py  monitor.sh  paper_trade_v3.py  run_backtest.py  simons_adaptive.py  simons_aggressive.py  simons_backtest.py  stat_arb_backtest.py  test_alternative_signals.py  test_data_download.py  test_official_sdk.py  test_order_api.py  test_weex_api.sh  test_weex_connectivity.py  train_and_backtest.py  train_hyperliquid_models.py  train_models_binance.py  v2_backtest.py
scripts/ralph/: CLAUDE.md  loop.sh
src/adaptive/: __init__.py  adaptive_manager.py  asset_config.py  dynamic_leverage.py  (+8 more)
(+123 files in other folders)
